--- a/wp-content/themes/rowling/style.css
+++ b/wp-content/themes/rowling/style.css
@@ -59,6 +59,8 @@ h1, h2, h3, h4, h5, h6, p, blockquote, address, big, cite, code, em, font, img, 
 	text-align:left;
 }
 
+p {word-break:break-word;}
+
 table {
 	border-collapse:collapse;
 	border-spacing:0;
