--- a/wp-content/plugins/bulletproof-security/admin/css/bps-grey-ui-theme.css
+++ b/wp-content/plugins/bulletproof-security/admin/css/bps-grey-ui-theme.css
@@ -124,6 +124,16 @@ div#milestone {font-weight:bold;height:20px;background-color:#CCC;border:1px sol
 .setup-wizard-inpage-text {font-size:1em;margin-bottom:20px;}
 .setup-wizard-blue-small-text {font-size:12px;}
 .setup-wizard-checks-text {font-size:12px;}
+span.arq-tooltip-sw-20 {display:inline-block;position:relative;}
+span.arq-tooltip-sw-20:hover {z-index:10;}
+span.arq-tooltip-sw-20 img:hover {z-index:10;}
+span.arq-tooltip-sw-20 span {display:none;position:absolute;bottom:0;left:0;right:0;}
+span.arq-tooltip-sw-20:hover span {width:700px;height:20px;display:block;position:absolute;top:0px;left:20px;right:0;color:#000;background-color:#dfecf2;border:1px solid #999;font-size:1em;font-weight:600;padding:2px 5px;margin-top:2px;-moz-border-radius-topleft:3px;-webkit-border-top-left-radius:3px;-khtml-border-top-left-radius:3px;border-top-left-radius:3px;-moz-border-radius-topright:3px;-webkit-border-top-right-radius:3px;-khtml-border-top-right-radius:3px;border-top-right-radius:3px;-webkit-box-shadow: 3px 3px 5px -1px rgba(153,153,153,0.7);-moz-box-shadow:3px 3px 5px -1px rgba(153,153,153,0.7);box-shadow:3px 3px 5px -1px rgba(153,153,153,0.7);}
+span.arq-tooltip-sw-60 {display:inline-block;position:relative;}
+span.arq-tooltip-sw-60:hover {z-index:10;}
+span.arq-tooltip-sw-60 img:hover {z-index:10;}
+span.arq-tooltip-sw-60 span {display:none;position:absolute;bottom:0;left:0;right:0;}
+span.arq-tooltip-sw-60:hover span {width:700px;height:60px;display:block;position:absolute;top:0px;left:20px;right:0;color:#000;background-color:#dfecf2;border:1px solid #999;font-size:1em;font-weight:600;padding:2px 5px;margin-top:2px;-moz-border-radius-topleft:3px;-webkit-border-top-left-radius:3px;-khtml-border-top-left-radius:3px;border-top-left-radius:3px;-moz-border-radius-topright:3px;-webkit-border-top-right-radius:3px;-khtml-border-top-right-radius:3px;border-top-right-radius:3px;-webkit-box-shadow: 3px 3px 5px -1px rgba(153,153,153,0.7);-moz-box-shadow:3px 3px 5px -1px rgba(153,153,153,0.7);box-shadow:3px 3px 5px -1px rgba(153,153,153,0.7);}
 /** Security Log **/
 SecurityLogTable {position:relative;top:0px;left:0px;margin:15px 0px 15px -3px;}
 #SecLogCounter {float:right;margin:0px 300px 10px 0px;color:black;font-size:12px;}
